# sqmake

./: README.md  pyproject.toml  requirements.txt  setup.py  sqm
sqmake/: __init__.py  circular_dependency_error.py  command.py  main.py  makefile.py  output.py  task.py  util.py
