[tool.poetry]
name = "sqmake"
version = "0.1.0"
description = "GNU `make`-like build tool for SQL databases"
authors = ["Matt Bhagat-Conway <matt@indicatrix.org>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.3.0"
pandas = "^1.0"
tqdm = "^4.0"
SQLAlchemy = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sqm = "sqmake.main:main"